--- a/RgSite/Views/Profile/Index.cshtml
+++ b/RgSite/Views/Profile/Index.cshtml
@@ -1,10 +1,7 @@
 ﻿@model RgSite.ViewModels.ProfileListViewModel
 
-<div class="container body-content">
-    <div class="row sectionHeader">
-        <div class="sectionHeading">Manage Users</div>
-    </div>
-    <div class="row" id="forumIndexContent">
+<div class="container">
+    <div class="row">
         <table class="table table-hover" id="userIndexTable">
             <thead>
                 <tr>
@@ -12,6 +9,11 @@
                     <th>Username</th>
                     <th>Email</th>
                     <th>Member Since</th>
+                    <th>
+                        <i>
+                            <a id="add-user" class="fas fa-user-plus pull-right" role="button" asp-controller="Profile" asp-action="AddUser"></a>
+                        </i>
+                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -30,9 +32,31 @@
                         <td>
                             @profile.MemberSince
                         </td>
+                        <td>
+                            <i>
+                                <a id="delete-user" class="fas fa-user-minus pull-right" role="button" asp-controller="Profile" asp-action="DeleteUser" ></a>
+                            </i>
+                        </td>
                     </tr>
                 }
             </tbody>
         </table>
     </div>
 </div>
+
+<style>
+    .container {
+        padding-top: 15px;
+    }
+
+    .userProfilePic {
+        height: 50px;
+        width: 50px;
+        background-size: 100%;
+    }
+
+    .fa-user-minus {
+        color: red;
+    }
+
+</style>
