--- a/RgSite/Views/ShoppingCart/Index.cshtml
+++ b/RgSite/Views/ShoppingCart/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="container">
 
     <!--Cart Items Table-->
-    <div class="row table-responsive">
+    <div class="row">
         <table class="table table-hover">
             <thead>
                 <tr>
