Add google maps to home page

--- a/RgSite/Views/Home/Index.cshtml
+++ b/RgSite/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="row">
             <div id="demo" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
-                <ul class="carousel-indicators" >
+                <ul class="carousel-indicators">
                     <li data-target="#demo" data-slide-to="0" class="active"></li>
                     <li data-target="#demo" data-slide-to="1"></li>
                 </ul>
@@ -109,9 +109,7 @@
                 </ul>
             </div>
             <div class="col-lg-6 col-sm-5">
-                <div class="hc-image">
-                    <img class="contact-image" src="~/images/logo.png" />
-                </div>
+                <div id="map"></div>
             </div>
         </div>
     </div>
@@ -133,11 +131,11 @@
     }
 
     .main-section.alabaster {
-	    background: #fafafa;
+        background: #fafafa;
     }
 
     .main-section {
-	    padding: 90px 0 110px;
+        padding: 90px 0 110px;
     }
 
     .alabaster {
@@ -153,7 +151,7 @@
     }
 
     .carousel {
-        width: 100%;        
+        width: 100%;
     }
 
     #carousel-img {
@@ -166,9 +164,9 @@
         text-align: center;
         font-size: 62px;
         font-weight: 900;
-        line-height: 62px; 
-        z-index: 5; 
-        white-space: nowrap; 
+        line-height: 62px;
+        z-index: 5;
+        white-space: nowrap;
     }
 
     .amazon-slide {
@@ -180,81 +178,81 @@
     }
 
     .carousel-text-div-left-top {
-        position: absolute; 
-        display: block; 
-        visibility: visible; 
-        left: 50px; 
-        top: 280px; 
+        position: absolute;
+        display: block;
+        visibility: visible;
+        left: 50px;
+        top: 280px;
         z-index: 9;
     }
 
     .carousel-text-div-left-bottom {
-        position: absolute; 
-        display: block; 
-        visibility: visible; 
-        left: 50px; 
-        top: 440px; 
+        position: absolute;
+        display: block;
+        visibility: visible;
+        left: 50px;
+        top: 440px;
         z-index: 9;
     }
 
     .carousel-text-div-right-top {
-        position: absolute; 
-        display: block; 
-        visibility: visible; 
-        right: -90px; 
-        top: 280px; 
+        position: absolute;
+        display: block;
+        visibility: visible;
+        right: -90px;
+        top: 280px;
         z-index: 9;
     }
 
     .carousel-text-div-right-bottom {
-        position: absolute; 
-        display: block; 
-        visibility: visible; 
-        right: -90px; 
-        top: 440px; 
+        position: absolute;
+        display: block;
+        visibility: visible;
+        right: -90px;
+        top: 440px;
         z-index: 9;
     }
 
     .carousel-text-div-left-top-amazon {
-        position: absolute; 
-        display: block; 
-        visibility: visible; 
-        left: 95px; 
-        top: 280px; 
+        position: absolute;
+        display: block;
+        visibility: visible;
+        left: 95px;
+        top: 280px;
         z-index: 9;
     }
 
     .carousel-text-div-left-bottom-amazon {
-        position: absolute; 
-        display: block; 
-        visibility: visible; 
-        left: 95px; 
-        top: 440px; 
+        position: absolute;
+        display: block;
+        visibility: visible;
+        left: 95px;
+        top: 440px;
         z-index: 9;
     }
 
     .carousel-text-header {
-        z-index: 8; 
-        min-width: 241px; 
-        max-width: 241px; 
+        z-index: 8;
+        min-width: 241px;
+        max-width: 241px;
         white-space: nowrap;
         font-size: 15px;
         font-weight: 700;
-        line-height: 22px; 
+        line-height: 22px;
     }
 
     .carousel-text {
-        z-index: 9; 
-        min-width: 241px; 
-        max-width: 241px; 
-        white-space: normal; 
-        font-size: 12px; 
-        line-height: 22px; 
+        z-index: 9;
+        min-width: 241px;
+        max-width: 241px;
+        white-space: normal;
+        font-size: 12px;
+        line-height: 22px;
     }
 
     .icon {
-        position: absolute; 
-        left: -40px; 
+        position: absolute;
+        left: -40px;
     }
 
     /* Contact
@@ -265,25 +263,25 @@
         padding-left: 0;
     }
 
-    .contact-info h3 {
-        font-size: 19px;
-        font-weight: 400;
-        float: left;
-        width: 102px;
-        margin-right: 12px;
-        line-height: 28px;
-    }
+        .contact-info h3 {
+            font-size: 19px;
+            font-weight: 400;
+            float: left;
+            width: 102px;
+            margin-right: 12px;
+            line-height: 28px;
+        }
 
-    .contact-info h3 i {
-        margin-right: 7px;
-    }
+            .contact-info h3 i {
+                margin-right: 7px;
+            }
 
-    .contact-info span {
-        line-height: 28px;
-        display: block;
-        overflow: hidden;
-        color: #888888;
-    }
+        .contact-info span {
+            line-height: 28px;
+            display: block;
+            overflow: hidden;
+            color: #888888;
+        }
 
     .social-link {
         padding: 35px 0;
@@ -293,27 +291,27 @@
         list-style: none;
     }
 
-    .social-link li {
-        float: left;
-        margin-right: 8px;
-    }
+        .social-link li {
+            float: left;
+            margin-right: 8px;
+        }
 
-    .social-link li a {
-        display: block;
-        width: 50px;
-        height: 50px;
-        text-align: center;
-        line-height: 50px;
-        font-size: 25px;
-        color: #fff;
-        background: #222222;
-        border-radius: 50%;
-        transition: all 0.3s ease-in-out;
-    }
+            .social-link li a {
+                display: block;
+                width: 50px;
+                height: 50px;
+                text-align: center;
+                line-height: 50px;
+                font-size: 25px;
+                color: #fff;
+                background: #222222;
+                border-radius: 50%;
+                transition: all 0.3s ease-in-out;
+            }
 
-    .social-link li a:hover, .social-link li a:focus {
-        text-decoration: none;
-    }
+                .social-link li a:hover, .social-link li a:focus {
+                    text-decoration: none;
+                }
 
     .instagram a:hover {
         background: #AA0DCD;
@@ -338,4 +336,30 @@
         border-style: none;
     }
 
+    #map {
+        width: 100%;
+        height: 400px;
+        background-color: grey;
+    }
 </style>
+
+@section scripts
+{
+    <script>
+        function initMap() {
+            // The location of RG
+            var rgLocation = { lat: 26.274632, lng: -80.135525 };
+
+            // The map, centered at Uluru
+            var map = new google.maps.Map(
+                document.getElementById('map'), { zoom: 4, center: rgLocation });
+
+            // The marker, positioned at Uluru
+            var marker = new google.maps.Marker({ position: rgLocation, map: map });
+        }
+    </script>
+
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlITa1B1usjYoEzx80hBsr_b9tMgCMue4&callback=initMap">
+    </script>
+}
