--- a/RgSite/Views/ShoppingCart/CheckoutForm.cshtml
+++ b/RgSite/Views/ShoppingCart/CheckoutForm.cshtml
@@ -55,7 +55,7 @@
         <!--Billing Details-->
         <div class="col-md-8 order-md-1">
             <h4 class="mb-3">BILLING DETAILS</h4>
-            <form asp-controller="ShoppingCart" asp-action="PlaceOrder" class="form-horizontal" enctype="multipart/form-data">
+            <form id="payment-form" asp-controller="ShoppingCart" asp-action="PlaceOrder" class="form-horizontal" enctype="multipart/form-data">
                 <div class="row">
                     <div class="form-group col-md-6 mb-3">
                         <label asp-for="FirstName" class="control-label"></label>
@@ -117,45 +117,80 @@
 
                 <!--Payment details-->
                 <h4 class="mb-3">Payment</h4>
-                <div class="d-block my-3">
-                    <label asp-for="PaymentDetail.CardType"></label>
-                    <select asp-for="PaymentDetail.CardType" asp-items="Html.GetEnumSelectList(Model.PaymentDetail.CardType.GetType())" class="form-control" id="engineTypeSelect">
-                        <option value="" selected>Select</option>
-                    </select>
-                </div>
                 <div class="row">
-                    <div class="col-md-6 mb-3">
-                        <label asp-for="PaymentDetail.CardNumber" class="control-label"></label>
-                        <input asp-for="PaymentDetail.CardNumber" class="form-control" />
-                        <span asp-validation-for="PaymentDetail.CardNumber" class="text-danger"></span>
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <label asp-for="PaymentDetail.CardOwnerName" class="control-label"></label>
-                        <input asp-for="PaymentDetail.CardOwnerName" class="form-control" />
-                        <span asp-validation-for="PaymentDetail.CardOwnerName" class="text-danger"></span>
-                        <small class="text-muted">Full name as displayed on card</small>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3 mb-3">
-                        <label asp-for="PaymentDetail.Expiration" class="control-label"></label>
-                        <input asp-for="PaymentDetail.Expiration" class="form-control" />
-                        <span asp-validation-for="PaymentDetail.Expiration" class="text-danger"></span>
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <label asp-for="PaymentDetail.CVV" class="control-label"></label>
-                        <input asp-for="PaymentDetail.CVV" class="form-control" />
-                        <span asp-validation-for="PaymentDetail.CVV" class="text-danger"></span>
-                    </div>
+                    <div id="card-element" class="col-md-10 mb-2"></div>
+
+                    <!-- Used to display Element errors. -->
+                    <div id="card-errors" role="alert"></div>
                 </div>
                 <hr class="mb-4">
+
                 <button class="btn btn-primary btn-lg btn-block custom-button-color" type="submit">Continue to checkout</button>
             </form>
         </div>
     </div>
 </div>
 
+@section Scripts {
+    <script src="https://js.stripe.com/v3/"></script>
 
+    <script>
+        var stripe = Stripe('@Model.StripePublicKey');
+        var elements = stripe.elements();
+
+        var style = {
+            base: {
+            // Add your base input styles here. For example:
+            fontSize: '16px',
+            color: '#32325d',
+            },
+        };
+
+        var card = elements.create("card", { style: style })
+        card.mount("#card-element");
+
+        // Handle real-time validation errors from the card element
+        card.addEventListener('change', function (event) {
+            var displayError = document.getElementById('card-errors');
+            if (event.error) {
+                displayError.textContent = event.error.message;
+            } else {
+                displayError.textContent = '';
+            }
+        });
+
+        // Handle form submission. Create a token or display an error when the form is submitted.
+        var form = document.getElementById('payment-form');
+
+        form.addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            stripe.createToken(card).then(function(result) {
+                if (result.error) {
+                    // Inform the customer that there was an error.
+                    var errorElement = document.getElementById('card-errors');
+                    errorElement.textContent = result.error.message;
+                } else {
+                    // Send the token to your server.
+                    stripeTokenHandler(result.token);
+                }
+            });
+        });
+
+        function stripeTokenHandler(token) {
+            // Insert the token ID into the form so it gets submitted to the server
+            var form = document.getElementById('payment-form');
+            var hiddenInput = document.createElement('input');
+            hiddenInput.setAttribute('type', 'hidden');
+            hiddenInput.setAttribute('name', 'stripeToken');
+            hiddenInput.setAttribute('value', token.id);
+            form.appendChild(hiddenInput);
+
+            // Submit the form
+            form.submit();
+        }
+    </script>
+}
 
 
 <style>
